unpackaged/main/default/objects/tspa__Observer_Details__c/tspa__Observer_Details__c.object-meta.xml
<CustomObject>
    <label>Visual Remote Assistant-Observer Details</label>
    <nameField>
        <displayFormat>Observer-{0000}</displayFormat>
        <label>Observer Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Observer Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>