unpackaged/main/default/objects/tspa__Observer_Details__c/fields/tspa__Invite_Name__c.field-meta.xml
<CustomField>
    <fullName>tspa__Invite_Name__c</fullName>
    <label>Invite Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>