unpackaged/main/default/objects/tspa__Observer_Details__c/fields/tspa__IsAccepted__c.field-meta.xml
<CustomField>
    <fullName>tspa__IsAccepted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Accepted</label>
    <type>Checkbox</type>
</CustomField>