unpackaged/main/default/objects/tspa__Observer_Details__c/fields/tspa__Observer__c.field-meta.xml
<CustomField>
    <fullName>tspa__Observer__c</fullName>
    <label>Observer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>