unpackaged/main/default/objects/tspa__Observer_Details__c/fields/tspa__Session_Id__c.field-meta.xml
<CustomField>
    <fullName>tspa__Session_Id__c</fullName>
    <label>Session Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>