unpackaged/main/default/objects/tspa__Observer_Details__c/listViews/tspa__All.listView-meta.xml
<ListView>
    <fullName>tspa__All</fullName>
    <columns>NAME</columns>
    <columns>tspa__Invite_Name__c</columns>
    <columns>tspa__IsClosed__c</columns>
    <columns>tspa__Observer__c</columns>
    <columns>tspa__Session_Id__c</columns>
    <columns>tspa__Observer_type__c</columns>
    <columns>tspa__Observer_link__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>